--- a/readdit-web/with-chakra-ui-app/package.json
+++ b/readdit-web/with-chakra-ui-app/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.0",
@@ -14,13 +15,18 @@
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.0",
-    "next": "latest",
+    "next": "^10.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "urql": "^2.0.1"
+    "urql": "^2.0.1",
+    "yarn": "^1.22.10"
   },
   "license": "MIT",
   "devDependencies": {
+    "@graphql-codegen/cli": "1.21.3",
+    "@graphql-codegen/typescript": "1.21.1",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@types/node": "^14.14.37",
     "typescript": "^4.2.3"
   }
