--- a/readdit-web/with-chakra-ui-app/package.json
+++ b/readdit-web/with-chakra-ui-app/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@urql/exchange-graphcache": "^4.0.0",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.0",
     "next": "^10.1.2",
+    "next-urql": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "urql": "^2.0.1",
